Fixed some overflow stuff

--- a/css/main.sass
+++ b/css/main.sass
@@ -160,6 +160,7 @@ form
 
 table
   width: calc(100% - 2rem)
+  min-width: 500px
   border: 1px solid $septaBlue
   box-shadow: 0px 0px 10px rgba(0,0,0,0.5)
   border-radius: 5px
@@ -195,7 +196,7 @@ table
     background: $septaRed
   td
     background: rgba(255,255,255,0.95)
+    overflow: hidden
+    white-space: nowrap
   tr:last-of-type td
     border-bottom: 0
-  tr.slow td
-    background: yellow
